--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -37,3 +37,12 @@ ul {
 .Comments {
   padding: 1em;
 }
+
+.Post {
+  border: 2px solid black;
+  padding: 0 1em;
+}
+
+.Post:not(:last-child) {
+  margin-bottom: 1em;
+}
